--- a/css/styles.css
+++ b/css/styles.css
@@ -208,7 +208,7 @@ body {
         line-height: 1.6; 
         letter-spacing: 0.03em;
 
-        transition: color var(--transition-dur-and-func), background-color var(--transition-dur-and-func), shadow var(--transition-dur-and-func), padding var(--transition-dur-and-func);
+        transition: color var(--transition-dur-and-func), background-color var(--transition-dur-and-func), shadow var(--transition-dur-and-func);
 }
 
 .button.primary:hover,
@@ -218,8 +218,6 @@ body {
 
 .button.secondary:hover,
 .button.secondary:focus {
-        padding: 6px 25px;
-
         color: var(--primary-bg);
         background-color: var(--accent);
         box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -592,7 +590,8 @@ body {
         transition: transform var(--transition-dur-and-func);
 }
 
-.portfolio-link:hover .portfolio-overlay-block{
+.portfolio-link:hover .portfolio-overlay-block,
+.portfolio-link:focus .portfolio-overlay-block{
         transform: translate(0, 0);
 }
 
@@ -624,6 +623,7 @@ body {
 .footer-flex-container {
         display: flex;
         gap: 70px;
+        align-items: baseline;
 }
 
 .footer .link {
@@ -654,11 +654,6 @@ address {
         font-style: normal;
 }
 
-.footer-social-list-container {
-        padding-top: 12px;
-        padding-bottom: 40px;
-}
-
 .footer-social-list-title {
         margin-top: 0;
         margin-bottom: 20px;
@@ -680,11 +675,6 @@ address {
 
 .footer-social-list-icon {
         fill: var(--primary-bg);
-}
-
-.footer-subscribe-form-wrapper {
-        padding-top: 12px;
-        padding-bottom: 34px;
 }
 
 .footer-subscribe-form {
@@ -723,8 +713,7 @@ address {
 }
 
 .footer-subscribe-button {
-        width: 200px;
-        height: 50px;
+        padding: 10px 28px;
         background-color: var(--accent);
         color: var(--primary-bg);
         font-weight: 700;
@@ -839,6 +828,10 @@ address {
 }
 
 .modal-form-field {
+        margin-bottom: 10px;
+}
+
+.modal-form-textarea {
         margin-bottom: 20px;
 }
 
@@ -954,8 +947,7 @@ address {
 
 .modal-form-submit {
         align-self: center;
-        min-width: 200px;
-        min-height: 50px;
+        padding: 10px 52px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         
         color: var(--primary-bg);
